--- a/TravisCIDemo/.travis.yml
+++ b/TravisCIDemo/.travis.yml
@@ -5,5 +5,8 @@ xcode_project: TravisCIDemo.xcodeproj
 xcode_scheme: TravisCIDemo
 xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 8
 
+branches:
+  only:
+    - master
 script:
  - fastlane scan
