--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-#osx_image: xcode11.3.1
+osx_image: xcode11.3.1
 language: swift
 os: osx
 xcode_project: TravisCIDemo.xcodeproj
@@ -8,6 +8,9 @@ xcode_scheme: TravisCIDemo
 branches:
   only:
     - master
-script:
+    
+before_install:
  - sudo gem install fastlane
+
+script:
  - fastlane archive
