--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ branches:
   only:
     - master
     
-before_install:
- - sudo gem install fastlane
- - sudo xcode-select -s /Applications/Xcode.app
-script:
- - fastlane archive
+#before_install:
+# - sudo gem install fastlane
+# - sudo xcode-select -s /Applications/Xcode.app
+#script:
+# - fastlane archive
