--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,6 @@ xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 # - sudo xcode-select -s /Applications/Xcode.app
 #script:
 # - fastlane archive
+
+script:
+- fastlane scan
