--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,14 @@ xcode_project: TravisCIDemo.xcodeproj
 xcode_scheme: TravisCIDemo
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
-#branches:
-#  only:
-#    - master
+branches:
+  only:
+    - master
     
-#before_install:
-# - sudo gem install fastlane
-# - sudo xcode-select -s /Applications/Xcode.app
+before_install:
+ - sudo gem install fastlane
+ - sudo gem cleanup
+ - sudo xcode-select -s /Applications/Xcode.app
 #script:
 # - fastlane archive
 
