--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-osx_image: xcode 11.3.1
+osx_image: xcode 11.3
 language: swift
 os: osx
 xcode_project: TravisCIDemo.xcodeproj
 xcode_scheme: TravisCIDemo
-xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
+xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 8
 
 branches:
   only:
