--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: swift
 os: osx
 xcode_project: TravisCIDemo.xcodeproj
 xcode_scheme: TravisCIDemo
+xcode_sdk: iphonesimulator 8.4
 xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 8
 
 branches:
