--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
-osx_image: xcode 11.3
-language: swift
-os: osx
-xcode_project: TravisCIDemo.xcodeproj
-xcode_scheme: TravisCIDemo
-xcode_sdk: iphonesimulator 8.4
-xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 8
-
-branches:
-  only:
-    - master
-    
-before_install:
- - sudo gem install fastlane
- - sudo gem cleanup
- - sudo xcode-select -s /Applications/Xcode.app
-#script:
-# - fastlane archive
+#osx_image: xcode 11.3
+#language: swift
+#os: osx
+#xcode_project: TravisCIDemo.xcodeproj
+#xcode_scheme: TravisCIDemo
+#xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 8
+#
+#branches:
+#  only:
+#    - master
+#
+#before_install:
+# - sudo gem install fastlane
+# - sudo gem cleanup
+# - sudo xcode-select -s /Applications/Xcode.app
+script:
+ - fastlane archive
