--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-#osx_image: xcode 11.3
+osx_image: xcode 11.3
 language: swift
-#os: osx
-#xcode_project: TravisCIDemo.xcodeproj
-#xcode_scheme: TravisCIDemo
-#xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 8
+os: osx
+xcode_project: TravisCIDemo.xcodeproj
+xcode_scheme: TravisCIDemo
+xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 8
 #
 #branches:
 #  only:
@@ -13,4 +13,4 @@ language: swift
 # - sudo gem install fastlane
 # - sudo gem cleanup
 # - sudo xcode-select -s /Applications/Xcode.app
-script: xcodebuild -workspace TravisCIDemo.xcworkspace -scheme TravisCIDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script: xcodebuild -workspace TravisCIDemo.xcodeproj -scheme TravisCIDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
