--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@
 #xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
 language: objective-c #1
-osx_image: xcode6.4 #2
+osx_image: xcode11.3 #2
 xcode_project: TravisCIDemo.xcodeproj #3
 xcode_scheme: TravisCIDemo #4
-xcode_sdk: iphonesimulator8.4 #5
+#xcode_sdk: iphonesimulator8.4 #5
 
 #
 #branches:
