--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ osx_image: xcode 11.3
 language: swift
 os: osx
 xcode_project: TravisCIDemo.xcodeproj
-xcode_scheme: TravisCIDemoUITests
+xcode_scheme: TravisCIDemo
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
 #
