--- a/TravisCIDemo.xcodeproj/xcshareddata/xcschemes/TravisCIDemoUITests.xcscheme
+++ b/TravisCIDemo.xcodeproj/xcshareddata/xcschemes/TravisCIDemoUITests.xcscheme
@@ -9,14 +9,14 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "243061E3242FB1EA006CE225"
-               BuildableName = "TravisCIDemo.app"
-               BlueprintName = "TravisCIDemo"
+               BlueprintIdentifier = "2430623A2430E1FB006CE225"
+               BuildableName = "TravisCIDemoUITests.xctest"
+               BlueprintName = "TravisCIDemoUITests"
                ReferencedContainer = "container:TravisCIDemo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -50,16 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "243061E3242FB1EA006CE225"
-            BuildableName = "TravisCIDemo.app"
-            BlueprintName = "TravisCIDemo"
-            ReferencedContainer = "container:TravisCIDemo.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -67,16 +57,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "243061E3242FB1EA006CE225"
-            BuildableName = "TravisCIDemo.app"
-            BlueprintName = "TravisCIDemo"
+            BlueprintIdentifier = "2430623A2430E1FB006CE225"
+            BuildableName = "TravisCIDemoUITests.xctest"
+            BlueprintName = "TravisCIDemoUITests"
             ReferencedContainer = "container:TravisCIDemo.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
