--- a/.travis.yml
+++ b/.travis.yml
@@ -16,18 +16,14 @@ before_script:
 
 
 script:
- - xcodebuild -workspace TravisCIDemo.xcworkspace -scheme TravisCIDemo -sdk OBJROOT=$PWD/build SYMROOT=$PWD/build
-  ONLY_ACTIVE_ARCH=NO
+ - xcodebuild -workspace TravisCIDemo.xcworkspace -scheme TravisCIDemo -sdk iphoneos -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO 'CODE_SIGN_RESOURCE_RULES_PATH=$(SDKROOT)/ResourceRules.plist'
   
 after_success:
  - ./scripts/sign-and-upload.sh
 after_script:
  - ./scripts/remove-key.sh
 
-  
-#  xctool -workspace TravisExample.xcworkspace -scheme TravisExample -sdk iphoneos -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO 'CODE_SIGN_RESOURCE_RULES_PATH=$(SDKROOT)/ResourceRules.plist'
-
-  
+    
 env:
   global:
   - APP_NAME="TravisCIDemo"
