--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ xcode_scheme: TravisCIDemo
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
 
-script:
+before_script:
  - sudo gem install fastlane
  - sudo gem cleanup
+script:
  - fastlane beta
     
 
