--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ xcode_project: TravisCIDemo.xcodeproj
 xcode_scheme: TravisCIDemo
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
-
+install:
+ - bundle install
 before_script:
  - sudo gem install fastlane
  - sudo gem cleanup
