--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ xcode_scheme: TravisCIDemo
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
 install:
+ - sudo bundle update --bundler
  - sudo bundle install
  - sudo bundle update fastlane
 before_script:
