--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ xcode_project: TravisCIDemo.xcodeproj
 xcode_scheme: TravisCIDemo
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
-setup_travis
+#setup_travis
 
 install:
  - sudo bundle install
