--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ xcode_scheme: TravisCIDemo
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
 
-install:
- - sudo bundle install
- - sudo bundle update fastlane
-before_script:
- - pod repo update
- - sudo gem install fastlane
- - sudo gem cleanup
+#install:
+# - sudo bundle install
+# - sudo bundle update fastlane
+#before_script:
+# - pod repo update
+# - sudo gem install fastlane
+# - sudo gem cleanup
 script:
  - fastlane useMatch
     
